--- a/clickhouse-servicecopy.yaml
+++ b/clickhouse-servicecopy.yaml
@@ -6,10 +6,12 @@ spec:
   type: NodePort
   selector:
     app: clickhouse
-  ports:
-      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
+  ports:      
     - port: 9000
-      targetPort: 9000
-      # Optional field
-      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
+      targetPort: 9000      
       nodePort: 32129
+      name: client
+    - port: 8123
+      targetPort: 8123      
+      nodePort: 32123
+      name: http
